<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvUserName"
                style="@style/TextStyleBold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center|start"
                android:gravity="center|start"
                android:text="@string/iTitle"
                android:textSize="22sp" />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15sp"
                android:background="@drawable/estimates_bg_item"
                android:orientation="vertical"
                android:paddingStart="14sp"
                android:paddingTop="10sp"
                android:paddingEnd="14sp"
                android:paddingBottom="10sp">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/lblYS"
                    style="@style/TextStyleBold"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|start"
                    android:gravity="center|start"
                    android:text="@string/statement"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:textSize="16sp" />

                <androidx.appcompat.widget.AppCompatTextView
                    style="@style/TextStyleBold"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|start"
                    android:layout_marginTop="10sp"
                    android:gravity="center|start"
                    android:text="@string/iAmount"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:textSize="36sp" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvDate"
                    style="@style/TextStyleItem"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|start"
                    android:layout_marginTop="10sp"
                    android:gravity="center|start"
                    android:text="@string/dueon"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:textSize="14sp" />
            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/TextStyleBold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center|start"
                android:layout_marginTop="15sp"
                android:gravity="center|start"
                android:text="@string/iHistory"
                android:textSize="16sp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvInvoices"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2sp" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_margin="20sp"
            android:contentDescription="@string/contact_"
            android:gravity="bottom|end"
            android:visibility="gone"
            android:src="@drawable/ic_user" />
    </FrameLayout>
</androidx.appcompat.widget.LinearLayoutCompat>
