<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/profile_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:gravity="center"
    android:orientation="vertical">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:gravity="top"
        android:orientation="vertical">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatTextView
                    style="@style/TextStyleBold"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|top"
                    android:gravity="center|start"
                    android:text="@string/yourProfile"
                    android:textSize="22sp" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|top"
                    android:layout_marginTop="25sp"
                    android:contentDescription="@string/app_name"
                    android:gravity="center|top"
                    android:src="@drawable/bg_pic" />

                <androidx.appcompat.widget.AppCompatTextView
                    style="@style/TextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="4sp"
                    android:gravity="center"
                    android:text="@string/editPic"
                    android:textSize="16sp" />

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="25dp"
                    android:orientation="vertical">

                    <androidx.appcompat.widget.AppCompatTextView
                        style="@style/TextStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center|start"
                        android:gravity="center|start"
                        android:text="@string/fullName"
                        android:textSize="16sp" />

                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8sp"
                        android:background="@drawable/bg_input_normal"
                        android:orientation="horizontal">

                        <androidx.appcompat.widget.AppCompatEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@null"
                            android:ellipsize="end"
                            android:hint="@string/yourName"
                            android:maxLines="1"
                            android:minHeight="48sp"
                            android:paddingStart="10sp"
                            android:paddingEnd="10sp"
                            android:textSize="16sp" />
                    </androidx.appcompat.widget.LinearLayoutCompat>

                    <androidx.appcompat.widget.AppCompatTextView
                        style="@style/TextStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center|start"
                        android:layout_marginTop="15sp"
                        android:gravity="center|start"
                        android:text="@string/designation"
                        android:textSize="16sp" />

                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="8sp"
                        android:background="@drawable/bg_input_normal"
                        android:orientation="horizontal">

                        <androidx.appcompat.widget.AppCompatEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@null"
                            android:ellipsize="end"
                            android:hint="@string/yourDesig"
                            android:maxLines="1"
                            android:minHeight="48sp"
                            android:paddingStart="10sp"
                            android:paddingEnd="10sp"
                            android:textSize="16sp" />
                    </androidx.appcompat.widget.LinearLayoutCompat>

                    <androidx.appcompat.widget.AppCompatTextView
                        style="@style/TextStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center|start"
                        android:layout_marginTop="15sp"
                        android:gravity="center|start"
                        android:text="@string/emailId"
                        android:textSize="16sp" />

                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="8sp"
                        android:background="@drawable/bg_input_normal"
                        android:orientation="horizontal">

                        <androidx.appcompat.widget.AppCompatEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@null"
                            android:ellipsize="end"
                            android:hint="@string/emailId"
                            android:maxLines="1"
                            android:minHeight="48sp"
                            android:paddingStart="10sp"
                            android:paddingEnd="10sp"
                            android:textSize="16sp" />
                    </androidx.appcompat.widget.LinearLayoutCompat>

                    <androidx.appcompat.widget.AppCompatTextView
                        style="@style/TextStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center|start"
                        android:layout_marginTop="15sp"
                        android:gravity="center|start"
                        android:text="@string/phoneNumber"
                        android:textSize="16sp" />

                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="8sp"
                        android:orientation="horizontal">

                        <androidx.appcompat.widget.LinearLayoutCompat
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:background="@drawable/bg_input_normal"
                            android:orientation="horizontal">

                            <androidx.appcompat.widget.AppCompatEditText
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:background="@null"
                                android:ellipsize="end"
                                android:hint="@string/p1"
                                android:maxLength="2"
                                android:maxLines="1"
                                android:minHeight="48sp"
                                android:paddingStart="12sp"
                                android:paddingEnd="12sp"
                                android:textSize="16sp" />
                        </androidx.appcompat.widget.LinearLayoutCompat>

                        <androidx.appcompat.widget.LinearLayoutCompat
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginStart="12sp"
                            android:layout_weight="1"
                            android:background="@drawable/bg_input_normal"
                            android:orientation="horizontal">

                            <androidx.appcompat.widget.AppCompatEditText
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:background="@null"
                                android:ellipsize="end"
                                android:hint="@string/p2"
                                android:maxLength="10"
                                android:maxLines="1"
                                android:minHeight="48sp"
                                android:paddingStart="10sp"
                                android:paddingEnd="10sp"
                                android:textSize="16sp" />
                        </androidx.appcompat.widget.LinearLayoutCompat>
                    </androidx.appcompat.widget.LinearLayoutCompat>

                    <androidx.appcompat.widget.AppCompatTextView
                        style="@style/TextStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center|start"
                        android:layout_marginTop="15sp"
                        android:gravity="center|start"
                        android:text="@string/cn"
                        android:textSize="16sp" />

                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="8sp"
                        android:background="@drawable/bg_input_normal"
                        android:orientation="horizontal">

                        <androidx.appcompat.widget.AppCompatEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@null"
                            android:ellipsize="end"
                            android:hint="@string/cn"
                            android:maxLines="1"
                            android:minHeight="48sp"
                            android:paddingStart="10sp"
                            android:paddingEnd="10sp"
                            android:textSize="16sp" />
                    </androidx.appcompat.widget.LinearLayoutCompat>

                    <androidx.appcompat.widget.AppCompatTextView
                        style="@style/TextStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center|start"
                        android:layout_marginTop="15sp"
                        android:gravity="center|start"
                        android:text="@string/industry"
                        android:textSize="16sp" />

                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="8sp"
                        android:background="@drawable/bg_input_normal"
                        android:orientation="horizontal">

                        <androidx.appcompat.widget.AppCompatEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@null"
                            android:ellipsize="end"
                            android:hint="@string/industry"
                            android:maxLines="1"
                            android:minHeight="48sp"
                            android:paddingStart="10sp"
                            android:paddingEnd="10sp"
                            android:textSize="16sp" />
                    </androidx.appcompat.widget.LinearLayoutCompat>

                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:id="@+id/llSave"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="25sp"
                        android:background="@drawable/bg_login"
                        android:gravity="center"
                        android:minHeight="46dp"
                        android:orientation="horizontal">

                        <androidx.appcompat.widget.AppCompatTextView
                            style="@style/TextStyleBold"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:gravity="center"
                            android:text="@string/save"
                            android:textSize="16sp" />
                    </androidx.appcompat.widget.LinearLayoutCompat>
                </androidx.appcompat.widget.LinearLayoutCompat>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="30sp"/>
            </androidx.appcompat.widget.LinearLayoutCompat>
        </androidx.core.widget.NestedScrollView>
    </androidx.appcompat.widget.LinearLayoutCompat>
</androidx.appcompat.widget.LinearLayoutCompat>