<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvUserName"
                style="@style/TextStyleBold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center|start|top"
                android:gravity="center|start|top"
                android:text="@string/eTitle"
                android:textSize="22sp" />

            <androidx.core.widget.NestedScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">


                    <androidx.appcompat.widget.AppCompatTextView
                        style="@style/TextStyleBold"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center|start"
                        android:layout_marginTop="15sp"
                        android:gravity="center|start"
                        android:text="@string/eTitleOngoing"
                        android:textSize="16sp" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rvEstimates"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp" />

                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:id="@+id/llNewProject"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="top|center"
                        android:layout_marginTop="10sp"
                        android:background="@drawable/bg_btn_addnew"
                        android:gravity="center"
                        android:minHeight="46dp"
                        android:orientation="horizontal">

                        <androidx.appcompat.widget.AppCompatTextView
                            style="@style/TextStyleItem"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:gravity="center"
                            android:textColor="@color/white"
                            android:textStyle="bold"
                            android:text="@string/addnew"
                            android:textSize="16sp" />
                    </androidx.appcompat.widget.LinearLayoutCompat>
                </androidx.appcompat.widget.LinearLayoutCompat>
            </androidx.core.widget.NestedScrollView>
        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:contentDescription="@string/contact_"
            android:gravity="bottom|end"
            android:src="@drawable/ic_user" />
    </FrameLayout>
</androidx.appcompat.widget.LinearLayoutCompat>
