<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@color/bg"
    android:fitsSystemWindows="true"
    android:gravity="center"
    android:orientation="vertical">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_marginStart="45sp"
        android:layout_marginEnd="45sp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|top"
            android:contentDescription="@string/app_name"
            android:gravity="center|top"
            android:src="@drawable/ic_login" />

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/TextStyleBold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center|top"
            android:layout_marginTop="25sp"
            android:gravity="center|top"
            android:text="@string/reset"
            android:textSize="24sp" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:orientation="vertical">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_input_one"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@null"
                    android:ellipsize="end"
                    android:hint="@string/new_password"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:minHeight="50dp"
                    android:paddingStart="20sp"
                    android:paddingEnd="15sp"
                    android:textSize="18sp" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|end"
                    android:layout_marginEnd="20dp"
                    android:src="@drawable/ic_eye" />

            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/bg_input_two"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@null"
                    android:ellipsize="end"
                    android:hint="@string/re_new_password"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:minHeight="50dp"
                    android:paddingStart="20sp"
                    android:paddingEnd="15sp"
                    android:textSize="18sp" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|end"
                    android:layout_marginEnd="20dp"
                    android:src="@drawable/ic_eye" />
            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center|start"
                android:layout_marginTop="25dp"
                android:gravity="start|center"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="17sp"
                    android:layout_height="17sp"
                    android:background="@drawable/bg_save_login" />

                <androidx.appcompat.widget.AppCompatTextView
                    style="@style/TextStyleBold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start|center"
                    android:layout_marginStart="12sp"
                    android:gravity="start|center"
                    android:text="@string/save_password"
                    android:textSize="14sp" />
            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/llLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="25sp"
                android:background="@drawable/bg_login"
                android:gravity="center"
                android:minHeight="46dp"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatTextView
                    style="@style/TextStyleBold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/continue_lbl"
                    android:textSize="16sp" />
            </androidx.appcompat.widget.LinearLayoutCompat>
        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.appcompat.widget.LinearLayoutCompat>

    <include
        android:id="@+id/custom_layout"
        layout="@layout/swich_view" />
</androidx.appcompat.widget.LinearLayoutCompat>